changed from host_vars to group_vars to have fewer files doing the same work

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ resources/playbook/vars/login.yml
 resources/playbook/vars/worker_specification.yml
 resources/playbook/vars/common_configuration.yml
 resources/playbook/host_vars/
+resources/playbook/group_vars/
 
 # any log files
 *.log
