fix wrong usage of jinja templating

--- a/resources/playbook/roles/bibigrid/tasks/001-apt.yml
+++ b/resources/playbook/roles/bibigrid/tasks/001-apt.yml
@@ -13,7 +13,7 @@
 - name: Wait for post-launch services to stop
   service_facts:
   register: result
-  until: "'{{ item }}' not in result.ansible_facts.services or result.ansible_facts.services['{{ item }}'].state == 'stopped'"
+  until: "item not in result.ansible_facts.services or result.ansible_facts.services[item].state == 'stopped'"
   retries: 12
   delay: 30
   with_items:
