--- a/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yml
@@ -160,6 +160,7 @@
   pip:
     name:
       - python-openstackclient==6.0.0
+      - openstacksdk==0.62.0
       - os_client_config
       - paramiko
       - ansible-runner
