fixed bug wireguard not installed on vpn-worker

--- a/resources/playbook/roles/bibigrid/tasks/main.yml
+++ b/resources/playbook/roles/bibigrid/tasks/main.yml
@@ -39,7 +39,7 @@
     - import_tasks: 001-yum.yml
 
 - name: Configure Wireguard for VPNs
-  when: "('master' in group_names or 'vpnwkrs' in group_names) and wireguard is defined"
+  when: "'vpn' in group_names and wireguard is defined"
   tags: ["vpn"]
   block:
     - debug:
