now using common variable wireguard_common instead of group_var wireguard which is always missing on workers.

--- a/resources/playbook/roles/bibigrid/tasks/main.yml
+++ b/resources/playbook/roles/bibigrid/tasks/main.yml
@@ -14,7 +14,7 @@
 #  retries: 30
 
 - name: Setup persistent ip routes
-  when: "'workers' in group_names and wireguard is defined"
+  when: "'workers' in group_names and wireguard_common is defined"
   block:
     - name: Running 000-add-ip-routes.yml
       debug:
