Added missing handler and added a task that updates the host file on worker

--- a/resources/playbook/roles/bibigrid/tasks/main.yml
+++ b/resources/playbook/roles/bibigrid/tasks/main.yml
@@ -62,6 +62,14 @@
         msg: "[BIBIGRID] Setup DNS"
     - import_tasks: 003-dns.yml
 
+- name: Update host file on worker
+  when: "'workers' in group_names"
+  tags: ["host"]
+  block:
+    - debug:
+        msg: "[BIBIGRID] Update hosts"
+    - import_tasks: 004-update-hosts.yml
+
 - name: Configure database
   when: "'master' in group_names"
   tags: ["database", "slurm"]
