Fixed minor bad namings and added missing ".yaml" extension to task file

--- a/resources/playbook/roles/bibigrid/tasks/000-add-ip-routes.yml
+++ b/resources/playbook/roles/bibigrid/tasks/000-add-ip-routes.yml
@@ -18,7 +18,7 @@
         state: absent
       with_items: "{{ collected_files.files }}"
   notify:
-    - apply netplan
+    - netplan apply
 
 - name: disable cloud network changes after initialization
   lineinfile:
