--- a/resources/playbook/roles/bibigrid/tasks/010-bin-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/010-bin-server.yml
@@ -19,3 +19,11 @@
       file:
         path: ~{{ ansible_facts.env.SUDO_USER }}/bin
         state: absent
+
+- name: generate location specific worker userdata
+  template:
+    src : "bin/bibiname.j2"
+    dest :  "/usr/local/bin/bibiname"
+    owner: slurm
+    group: ansible
+    mode: '0775'
