renamed task to "generate bibiname script"

--- a/resources/playbook/roles/bibigrid/tasks/010-bin-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/010-bin-server.yml
@@ -20,10 +20,8 @@
         path: ~{{ ansible_facts.env.SUDO_USER }}/bin
         state: absent
 
-- name: generate location specific worker userdata
+- name: generate bibiname script
   template:
     src : "bin/bibiname.j2"
     dest :  "/usr/local/bin/bibiname"
-    owner: slurm
-    group: ansible
     mode: '0775'
