Added delete_server.py script to bin copied files

--- a/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yml
@@ -155,6 +155,13 @@
     group: ansible
     mode: "0750"
 
+- name: Copy "delete_server.py" script
+  copy:
+    src: slurm/delete_server.py
+    dest: /usr/local/bin/delete_server.py
+    owner: slurm
+    group: ansible
+    mode: "0750"
 
 - name: Install python dependencies
   pip:
