--- a/resources/playbook/roles/bibigrid/tasks/004-update-hosts.yml
+++ b/resources/playbook/roles/bibigrid/tasks/004-update-hosts.yml
@@ -1,4 +1,4 @@
-- name: Add a line to a file
+- name: Add master to hosts' file
   lineinfile:
     path: /etc/hosts
     line: "{{ hostvars[groups.master.0].private_v4 }} {{ hostvars[groups.master.0].name }}"
