--- a/resources/playbook/roles/bibigrid/tasks/025-nfs-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/025-nfs-server.yml
@@ -19,7 +19,11 @@
     state: present
     regexp: '^{{ item.src }}'
 
-    line: "{{ item.src }}  {{cluster_cidrs|map(attribute='provider_cidrs')|join('(rw,nohide,insecure,no_subtree_check,async) ')}}(rw,nohide,insecure,no_subtree_check,async) {{ '10.0.0.0/'+wireguard.mask_bits|default(24)|string + '(rw,nohide,insecure,no_subtree_check,async)' if wireguard is defined }}"
+    line: "{{ item.src }}
+    {{cluster_cidrs|map(attribute='provider_cidrs')|join('(rw,nohide,insecure,no_subtree_check,async) ')}}\
+    (rw,nohide,insecure,no_subtree_check,async)
+    {{ '10.0.0.0/'+wireguard.mask_bits|default(24)|string + '(rw,nohide,insecure,no_subtree_check,async)'
+    if wireguard is defined }}"
   with_items:
     - "{{ nfs_mounts }}"
   notify:
