--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -72,10 +72,10 @@ SlurmdLogFile=/var/log/slurm/slurmd.log
 NodeName={{ instances.master.name }} SocketsPerBoard={{ instances.master.flavor.vcpus }} CoresPerSocket=1 RealMemory={{ mem - [mem // 2, 16000] | min }} State=UNKNOWN
 {% for cloud in instances.keys() if cloud != "master" %}
 # {{cloud}}
-{% if "vpnwkr" in instances[cloud].keys() %}
-NodeName={{ instances[cloud]["vpnwkr"].name }} SocketsPerBoard={{ instances[cloud]["vpnwkr"].flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD
-{{ sl.list.append(instances[cloud]["vpnwkr"].name) }}
-{% endif %}
+#{% if "vpnwkr" in instances[cloud].keys() %}
+#NodeName={{ instances[cloud]["vpnwkr"].name }} SocketsPerBoard={{ instances[cloud]["vpnwkr"].flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD
+#{{ sl.list.append(instances[cloud]["vpnwkr"].name) }}
+#{% endif %}
 {% for type in instances[cloud].get("workers", []) %}
 {% set mem = type.flavor.ram // 1024 * 1000 %}
 NodeName={{ type.name }} SocketsPerBoard={{ type.flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD
