removed all references to the instances.master

--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -1,5 +1,5 @@
 # MANAGEMENT POLICIES
-SlurmctldHost={{ instances.master.name | lower }}
+SlurmctldHost={{ hostvars[groups.master.0].name | lower }}
 AuthType=auth/munge
 CryptoType=crypto/munge
 SlurmUser=slurm
@@ -57,7 +57,7 @@ SelectTypeParameters=CR_Core
 # ACCOUNTING
 AccountingStorageType=accounting_storage/slurmdbd
 AccountingStoreFlags=job_comment
-AccountingStorageHost={{ instances.master.name | lower }}
+AccountingStorageHost={{ hostvars[groups.master.0].name | lower }}
 AccountingStorageUser={{ slurm_conf.db_user }}
 
 # LOGGING
@@ -67,9 +67,9 @@ SlurmdDebug=info
 SlurmdLogFile=/var/log/slurm/slurmd.log
 
 # COMPUTE NODES
-{% set sl = {"list":[instances.master.name|lower if use_master_as_compute]} %}
-{% set mem = instances.master.flavor.ram // 1024 * 1000 %}
-NodeName={{ instances.master.name }} SocketsPerBoard={{ instances.master.flavor.vcpus }} CoresPerSocket=1 RealMemory={{ mem - [mem // 2, 16000] | min }} State=UNKNOWN
+{% set sl = {"list":[hostvars[groups.master.0].name|lower if use_master_as_compute]} %}
+{% set mem = hostvars[groups.master.0].flavor.ram // 1024 * 1000 %}
+NodeName={{ hostvars[groups.master.0].name }} SocketsPerBoard={{ hostvars[groups.master.0].flavor.vcpus }} CoresPerSocket=1 RealMemory={{ mem - [mem // 2, 16000] | min }} State=UNKNOWN
 {% for cloud in instances.keys() if cloud != "master" %}
 # {{cloud}}
 
@@ -90,8 +90,8 @@ ResumeTimeout= {{ slurm_conf.elastic_scheduling.ResumeTimeout }}
 SuspendProgram=/opt/slurm/terminate.sh
 # Suspend time is 10 minutes (600 seconds)
 SuspendTime= {{ slurm_conf.elastic_scheduling.SuspendTime }}
-# Excludes {{ instances.master.name }} from suspend
-SuspendExcNodes={{ instances.master.name }}
+# Excludes {{ hostvars[groups.master.0].name }} from suspend
+SuspendExcNodes={{ hostvars[groups.master.0].name }}
 # Maximum number of nodes
 TreeWidth= {{ slurm_conf.elastic_scheduling.TreeWidth }}
 # Do not cache dns names
