fixed slurm.conf creating NodeName duplicates. Still unordered.

--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -65,39 +65,26 @@ SlurmctldDebug=info
 SlurmctldLogFile=/var/log/slurm/slurmctld.log
 SlurmdDebug=info
 SlurmdLogFile=/var/log/slurm/slurmd.log
-{{groups.workers}}
-{{groups}}
+
 # COMPUTE NODES
 {% set sl = {} %}
 {% for node_name in groups.master+groups.workers %}
 {% set node = hostvars[node_name] %}
 {% set mem = node.flavor.ram // 1024 * 1000 %}
+{% if node.cloud_identifier not in sl %}
 {{ sl.update({node.cloud_identifier: []}) }}
+{% endif %}
+{% if node.name not in sl[node.cloud_identifier] %}
 NodeName={{ node.name }} SocketsPerBoard={{ node.flavor.vcpus }} CoresPerSocket=1 RealMemory={{ mem - [mem // 2, 16000] | min }} State=CLOUD # {{ node.cloud_identifier }}
 {{ sl[node.cloud_identifier].append(node.name)}}
+{% endif %}
 {% endfor %}
-
 {% for key,value in sl.items() %}
 PartitionName={{ key }} Nodes={{value|join(",")}} default=yes
 {% endfor %}
 
-#{% set sl = {"list":[hostvars[groups.master.0].name|lower if use_master_as_compute]} %}
-#{% set mem = hostvars[groups.master.0].flavor.ram // 1024 * 1000 %}
-#NodeName={{ hostvars[groups.master.0].name }} SocketsPerBoard={{ hostvars[groups.master.0].flavor.vcpus }} CoresPerSocket=1 RealMemory={{ mem - [mem // 2, 16000] | min }} State=UNKNOWN
-#{% for cloud in instances.keys() if cloud != "master" %}
-# {{cloud}}
-
-#{% for type in instances[cloud].get("workers", []) %}
-#{% set mem = type.flavor.ram // 1024 * 1000 %}
-#NodeName={{ type.name }} SocketsPerBoard={{ type.flavor.vcpus }} CoresPerSocket=1 RealMemory={% if mem < 16001 %}{{ mem - [ mem // 16, 512] | max }}{% endif %}{% if mem > 16000 %}{{ mem - [mem // 16, 4000] | min }}{% endif %} State=CLOUD
-#{{ sl.list.append(type.name)}}
-#{% endfor %}
-#PartitionName={{ cloud }} Nodes={{sl.list|join(",")}} default=yes
-#{{ sl.update({"list":[]}) }}
-#{% endfor %}
-
 # JobSubmitPlugin
-JobSubmitPlugin=all_partitions
+JobSubmitPlugins=all_partitions
 
 # POWER  /ELASTIC SCHEDULING
 ResumeProgram=/opt/slurm/create.sh
