Added all partition

--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -68,6 +68,7 @@ SlurmdLogFile=/var/log/slurm/slurmd.log
 
 # COMPUTE NODES
 {% set sl = {} %}
+{% set all = {"nodes":[]} %}
 {% for node_name in groups.master+groups.workers %}
 {% set node = hostvars[node_name] %}
 {% set mem = node.flavor.ram // 1024 * 1000 %}
@@ -77,11 +78,13 @@ SlurmdLogFile=/var/log/slurm/slurmd.log
 {% if node.name not in sl[node.cloud_identifier] %}
 NodeName={{ node.name }} SocketsPerBoard={{ node.flavor.vcpus }} CoresPerSocket=1 RealMemory={{ mem - [mem // 2, 16000] | min }} State=CLOUD # {{ node.cloud_identifier }}
 {{ sl[node.cloud_identifier].append(node.name)}}
+{{ all.nodes.append(node.name)}}
 {% endif %}
 {% endfor %}
 {% for key,value in sl.items() %}
-PartitionName={{ key }} Nodes={{value|join(",")}} default=yes
+PartitionName={{ key }} Nodes={{ value|join(",") }}
 {% endfor %}
+PartitionName=All Nodes = {{ all.nodes|join(",") }} default=yes
 
 # JobSubmitPlugin
 JobSubmitPlugins=all_partitions
