--- a/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yml
@@ -213,8 +213,8 @@
 - name: Generate location specific worker userdata
   template:
     src: slurm/worker_userdata.j2
-    dest: "/opt/slurm/userdata_{{ item }}.txt"
+    dest: "/opt/slurm/userdata_{{ hostvars[item].cloud_identifier }}.txt"
     owner: slurm
     group: ansible
     mode: "0640"
-  with_items: "{{ instances.keys() }}"
+  with_items: "{{ groups.vpnwkr + groups.master }}"
