changed vpnwkr to vpngtw

--- a/bibigrid.yml
+++ b/bibigrid.yml
@@ -1,6 +1,6 @@
   # See https://cloud.denbi.de/wiki/Tutorials/BiBiGrid/ (after update)
   # First configuration also holds general cluster information and must include the master.
-  # All other configurations mustn't include another master, but exactly one vpnWorker instead (keys like master).
+  # All other configurations mustn't include another master, but exactly one vpngtw instead (keys like master).
 
 - infrastructure: openstack # former mode. Describes what cloud provider is used (others are not implemented yet)
   cloud: openstack # name of clouds.yaml cloud-specification key (which is value to top level key clouds)
