Keep master updated (#401)
* add apt.bi.denbi.de as package source

* update slurm tasks (now uses self-build slurm packages -> v22.05.7, restructure slurm files)

* add documentation to build newer Slurm package

* fixes

* slurmrestd uses openapi/v0.0.38

* Added check_nfs as a non fatale evaluation (#366)

* Added "." and "-" cases for cid. This allows further rescuing and gives info messages. (#365)

* Added identifier for when no profile is defined to have a distinct identifier.

* Activated vpn setup

* Fixed example command

* Added logging info for file push and commands

* fix slurmrestd connfiguration

* Implementing wireguard

* update task order (slurm-server)

* fix default user chown settings

* Add an additional mariadb repository for Ubuntu 20.04. Zabbix 7.2 needs at least MariaDB 10.5 or higher and Focal comes with MariaDB 10.3.

* Extend slurm documentation.

* Extends documentation that BiBiGrid now supports Ubuntu 20.04/22.04 and Debian 11 (fixes #348).

* cleanup

* fix typos in documentation

* Updated wg0

* fix typos in documentation

* add workflow-job to lint python/ansible

* add more output

* add more output

* update runner working directory

* make ansible_lint happy

* rewrite linting workflow
add linting dependencies

* fix a typo

* fix pylintrc -> remove ignore-pattern=test/ (not needed, since pylint currently lints bibigrid folder)
make pylint happy

* fixing jinja

* changed jinja

* Fixed wrong when clause

* Removed unnecessary comments and added index implementation

* this_peer is now used

* Added configuration reload if necessary

* Moved restart to handlers

* Added missing handler

* Changed to systemd setup

* Fixed nfs

* Fixed a few bugs more to come

* added some defaults

* Added vpn wkr without ip

* removed unnecessary print and fixed typo

* added vpn counter

* debugging bug

* debugging vpnwkr naming is wrong

* Comme

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,9 @@
 # variable resources
 resources/playbook/site.yml
 resources/playbook/ansible_hosts
-resources/playbook/vars/instances.yml
-resources/playbook/vars/login.yml
-resources/playbook/vars/worker_specification.yml
-resources/playbook/vars/common_configuration.yml
+resources/playbook/vars/
+resources/playbook/host_vars/
+resources/playbook/group_vars/
 
 # any log files
 *.log
