--- a/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yml
@@ -101,6 +101,12 @@
     state: directory
     mode: "0770"
 
+- name: Ensures /etc/slurm dir exists
+  file:
+    path: /etc/slurm/
+    state: directory
+    mode: 0755
+
 - name: Ensures /opt/slurm/.ssh/ dir exists
   file:
     path: /opt/slurm/.ssh/
@@ -149,11 +155,19 @@
     group: ansible
     mode: "0750"
 
+- name: Copy "delete_server.py" script
+  copy:
+    src: slurm/delete_server.py
+    dest: /usr/local/bin/delete_server.py
+    owner: slurm
+    group: ansible
+    mode: "0750"
 
 - name: Install python dependencies
   pip:
     name:
       - python-openstackclient==6.0.0
+      - openstacksdk==0.62.0
       - os_client_config
       - paramiko
       - ansible-runner
@@ -195,3 +209,12 @@
         - slurmd
         - slurmdbd
         - slurmrestd
+
+- name: Generate location specific worker userdata
+  template:
+    src: slurm/worker_userdata.j2
+    dest: "/opt/slurm/userdata_{{ hostvars[item].cloud_identifier }}.txt"
+    owner: slurm
+    group: ansible
+    mode: "0640"
+  with_items: "{{ groups.vpngtw + groups.master }}"
