--- a/resources/playbook/roles/bibigrid/tasks/020-disk-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/020-disk-server.yml
@@ -16,3 +16,33 @@
   with_items:
     - "{{ master.disks }}"
   when: master.disks is defined
+
+- name: Make sure disks are available
+  filesystem:
+    fstype: ext4
+    dev: "{{item.device}}"
+    force: false
+    state: present
+  ignore_errors: true
+  when: volumes is defined
+  with_items:
+    - "{{ volumes }}"
+
+- name: Create mount folders if it doesn't exist
+  ansible.builtin.file:
+    path: "/{{item.name}}"
+    state: directory
+    mode: '0755'
+  with_items:
+    - "{{ volumes }}"
+
+- name: Mount disks
+  mount:
+    path: "{{ item.name }}"
+    src: "{{ item.device }}"
+    fstype: ext4
+    state: mounted
+  ignore_errors: true
+  with_items:
+    - "{{ volumes }}"
+  when: volumes is defined
