reduced to 'file'

--- a/resources/playbook/roles/bibigrid/tasks/020-disk-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/020-disk-server.yml
@@ -29,7 +29,7 @@
     - "{{ volumes }}"
 
 - name: Create mount folders if it doesn't exist
-  ansible.builtin.file:
+  file:
     path: "/{{item.name}}"
     state: directory
     mode: '0755'
