--- a/resources/playbook/roles/bibigrid/tasks/000-add-ip-routes.yml
+++ b/resources/playbook/roles/bibigrid/tasks/000-add-ip-routes.yml
@@ -1,15 +1,15 @@
-- name: disable netplan configuration files
+- name: Disable netplan configuration files
   notify:
     - netplan apply
   block:
-    - name: collect files
+    - name: Collect files
       find:
         paths: /etc/netplan/
         hidden: true
         recurse: true
         file_type: any
       register: collected_files
-    - name: copy files
+    - name: Copy files
       copy:
         src: "{{ item.path }}"
         dest: "{{ item.path }}.disabled"
@@ -17,13 +17,13 @@
         group: root
         mode: 0644
       with_items: "{{ collected_files.files }}"
-    - name: remove collected files
+    - name: Remove collected files
       file:
         path: "{{ item.path }}"
         state: absent
       with_items: "{{ collected_files.files }}"
 
-- name: disable cloud network changes after initialization
+- name: Disable cloud network changes after initialization
   lineinfile:
     path: /etc/cloud/cloud.cfg.d/99-disable-network-config.cfg
     line: "network: {config: disabled}"
@@ -32,7 +32,7 @@
     mode: 0644
     create: true
 
-- name: generate location specific worker userdata
+- name: Generate location specific worker userdata
   template:
     src: networking/bibigrid_ens3.network.j2
     dest: "/etc/systemd/network/bibigrid_ens3.network"
@@ -43,7 +43,7 @@
   notify:
     - systemd-networkd restart
 
-- name: generate location specific worker userdata
+- name: Generate location specific worker userdata
   template:
     src: networking/bibigrid_ens3.link.j2
     dest: "/etc/systemd/network/bibigrid_ens3.link"
