fixed name not being capitalized (ansible)

--- a/resources/playbook/roles/bibigrid/tasks/010-bin-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/010-bin-server.yml
@@ -20,7 +20,7 @@
         path: ~{{ ansible_facts.env.SUDO_USER }}/bin
         state: absent
 
-- name: generate bibiname script
+- name: Generate bibiname script
   template:
     src: "bin/bibiname.j2"
     dest: "/usr/local/bin/bibiname"
