423 rest api prototype (#437)
* added exact versions for openstsacksdk and python-openstackclient (#413)

* Keep master updated (#401)

* add apt.bi.denbi.de as package source

* update slurm tasks (now uses self-build slurm packages -> v22.05.7, restructure slurm files)

* add documentation to build newer Slurm package

* fixes

* slurmrestd uses openapi/v0.0.38

* Added check_nfs as a non fatale evaluation (#366)

* Added "." and "-" cases for cid. This allows further rescuing and gives info messages. (#365)

* Added identifier for when no profile is defined to have a distinct identifier.

* Activated vpn setup

* Fixed example command

* Added logging info for file push and commands

* fix slurmrestd connfiguration

* Implementing wireguard

* update task order (slurm-server)

* fix default user chown settings

* Add an additional mariadb repository for Ubuntu 20.04. Zabbix 7.2 needs at least MariaDB 10.5 or higher and Focal comes with MariaDB 10.3.

* Extend slurm documentation.

* Extends documentation that BiBiGrid now supports Ubuntu 20.04/22.04 and Debian 11 (fixes #348).

* cleanup

* fix typos in documentation

* Updated wg0

* fix typos in documentation

* add workflow-job to lint python/ansible

* add more output

* add more output

* update runner working directory

* make ansible_lint happy

* rewrite linting workflow
add linting dependencies

* fix a typo

* fix pylintrc -> remove ignore-pattern=test/ (not needed, since pylint currently lints bibigrid folder)
make pylint happy

* fixing jinja

* changed jinja

* Fixed wrong when clause

* Removed unnecessary comments and added index implementation

* this_peer is now used

* Added configuration reload if necessary

* Moved restart to handlers

* Added missing handler

* Changed to systemd setup

* Fixed nfs

* Fixed a few bugs more to come

* added some defaults

* Added vpn wkr without ip

* removed unnecessar

--- a/bibigrid.yml
+++ b/bibigrid.yml
@@ -38,6 +38,8 @@
 
   ## Uncomment if you don't want assign a public ip to the master; for internal cluster (Tuebingen).
   #useMasterWithPublicIp: False # defaults True if False no public-ip (floating-ip) will be allocated
+  # deleteTmpKeypairAfter: False
+  # dontUploadCredentials: False
 
   # Other keys - default False
   #localFS: True
@@ -91,6 +93,10 @@
 
   # Depends on cloud site and project
   subnet: # existing subnet on your cloud. See https://openstack.cebitec.uni-bielefeld.de/project/networks/
+  # or network:
+  # gateway: # if you want to use a gateway for create.
+    # ip: # IP of gateway to use
+    # portFunction: 30000 + oct4 # variables are called: oct1.oct2.oct3.oct4
 
   # Uncomment if no full DNS service for started instances is available.
   # Currently, the case in Berlin, DKFZ, Heidelberg and Tuebingen.
